# live-note

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  config.example.toml  config.remote.example.toml  pyproject.toml
.sisypus/plans/: 2026-04-09-runtime-v2-refactor-plan.md  2026-04-12-runtime-architecture.md
docs/: technical-qa.md
docs/experiments/: realtime-text-source-discovery.md
docs/experiments/templates/: realtime-text-decision.md
docs/superpowers/plans/: 2026-03-19-remote-import-speaker-diarization.md  2026-03-19-remote-import.md  2026-03-19-remote-managed-tasks.md  2026-03-23-remote-task-persistence.md  2026-03-24-phase1-service-decomposition.md
docs/superpowers/specs/: 2026-03-19-remote-import-speaker-diarization-design.md  2026-03-19-remote-managed-tasks-design.md  2026-03-23-remote-task-persistence-design.md
examples/: ui_preview_qt.py
src/live_note/: __main__.py  branding.py  config.py  domain.py  llm.py  remote_sync.py  review.py  runtime_daemon_main.py  session_workspace.py  utils.py
src/live_note/app/: cli.py  coordinator.py  coordinator_factory_service.py  doctor_service.py  events.py  gui.py  gui_execution_target.py  gui_layout.py  (+31 more)
tests/: conftest.py  test_branding.py  test_capture.py  test_cli.py  test_config_remote.py  test_convert.py  test_coordinator.py  test_funasr.py  test_gui.py  test_gui_qt_preview.py  test_journal.py  test_live_control.py  test_llm.py  test_merge.py  test_model_selection.py  test_obsidian_client.py  test_qt_backdrop.py  test_realtime_text_arms.py  test_realtime_text_experiment.py  test_realtime_text_replay.py  test_remote_api.py  test_remote_client.py  test_remote_coordinator.py  test_remote_deploy.py  test_remote_import.py  test_remote_live_runner.py  test_remote_projections.py  test_remote_server.py  test_remote_sync.py  test_remote_tasks.py  test_remote_tasks_store.py  test_renderer.py  test_review.py  test_runtime_live_control.py  test_runtime_store.py  test_segmentation.py  test_services.py  test_session_actions.py  test_session_outputs.py  test_smoke.py  (+7 more)
(+106 files in other folders)
