[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "live-note"
version = "0.1.0"
description = "Audio note-taking for meetings, lectures, and recordings with whisper.cpp and Obsidian"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "opencc-python-reimplemented>=0.1.7",
  "sounddevice>=0.4.7",
  "uvicorn>=0.35.0",
  "websockets>=15.0.1",
  "webrtcvad-wheels>=2.0.14",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]
speaker = [
  "numpy>=2.0.0",
  "sherpa-onnx",
]
speaker-pyannote = [
  "pyannote.audio",
]

[project.scripts]
live-note = "live_note.app.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
live_note = ["assets/branding/*.svg", "assets/branding/*.png"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
